--- a/01_FinalModels.Rmd
+++ b/01_FinalModels.Rmd
@@ -288,13 +288,13 @@ model_rows_fixed_hu <- c(
   )
 
 model_rows_fixed_hu_ordinal <- c(
-  model_rows_fixed_hu[1],
+  model_rows_fixed_hu[1:2],
   'Intercept[1]',
   'Intercept[2]',
   'Intercept[3]',
   'Intercept[4]',
   'Intercept[5]',
-  model_rows_fixed_hu[2:length(model_rows_fixed_hu)]
+  model_rows_fixed_hu[3:length(model_rows_fixed_hu)]
 )
 
 
@@ -382,13 +382,13 @@ model_rownames_fixed_hu <- c(
 
 
 model_rownames_fixed_hu_ordinal <- c(
-  model_rownames_fixed_hu[1],
+  model_rownames_fixed_hu[1:2],
   'Intercept[1]',
   'Intercept[2]',
   'Intercept[3]',
   'Intercept[4]',
   'Intercept[5]',
-  model_rownames_fixed_hu[2:length(model_rownames_fixed_hu)]
+  model_rownames_fixed_hu[3:length(model_rownames_fixed_hu)]
 )
 
 
@@ -560,7 +560,6 @@ DHARMa.check_brms.all(pa_sub, integer = TRUE, outliers_type = 'bootstrap')
 # summarize with rope range for hurdle part
 summary_pa_sub_hu <- summarize_brms(
   pa_sub, 
-  stats_to_report = c('CI', 'SE', 'Rhat', 'ESS'),
   rope_range = c(-0.18, 0.18),
   model_rows_fixed = model_rows_fixed_hu,
   model_rows_random = model_rows_random_hu,
@@ -1188,9 +1187,9 @@ hypothesis(is_reactance, "pressure_self_cw > pushing_self_cw")
 
 ```{r report_sidebyside, results = 'asis'}
 
-report_hurdle <- F
-report_ordinal <- F
-stats_to_report <- c('CI', 'pd', 'rope', 'BF')
+report_hurdle <- T
+report_ordinal <- T
+stats_to_report <- c('SE', 'CI', 'pd')
 
 process_model_component <- function(obj) {
   # Convert to string, modify, and evaluate
@@ -1209,8 +1208,8 @@ all_models <- report_side_by_side(
   reactance_ordinal,
   is_reactance,
   
-  bayesfactor = bayesfactor,
-  #stats_to_report = stats_to_report,
+  stats_to_report = stats_to_report,
+  
   model_rows_random = process_model_component(model_rows_random),
   model_rows_fixed = process_model_component(model_rows_fixed),
   model_rownames_random = process_model_component(model_rownames_random),
@@ -1222,59 +1221,28 @@ all_models <- report_side_by_side(
 
 
 # pretty printing
-if (bayesfactor) {
-  summary_all_models <- all_models %>%
-    print_df(rows_to_pack = rows_to_pack_final) %>%
-    add_header_above(
-      c(" ", "Subjective MVPA Hurdle Lognormal" = 5, 
-        "Device-Based MVPA Log (Gaussian)" = 5, 
-        "Mood Gaussian" = 5,
-        "Reactance Ordinal" = 5,
-        "Reactance Dichotome" = 5)
-    )
 
-  export_xlsx(
-    summary_all_models, 
-    rows_to_pack = rows_to_pack_final,
-    file.path("Output", "AllModels_experimental_noAR.xlsx"), 
-    merge_option = 'both', 
-    simplify_2nd_row = TRUE,
-    colwidths = c(38, 
-                  7.2,13.3,7.2,7.2,24,
-                  7.2,13.3,7.2,7.2,24,
-                  7.2,13.3,7.2,7.2,24,
-                  7.2,13.3,7.2,7.2,24,
-                  7.2,13.3,7.2,7.2,24),
-    line_above_rows = c(1,2),
-    line_below_rows = c(-1)
+summary_all_models <- all_models %>%
+  print_df(rows_to_pack = process_model_component(rows_to_pack)) %>%
+  add_header_above(
+    c(" ", "Subjective MVPA Hurdle Lognormal" = (length(all_models) / 5),  
+      "Device-Based MVPA Log (Gaussian)" = (length(all_models) / 5), 
+      "Mood Gaussian" = (length(all_models) / 5),
+      "Reactance Ordinal" = (length(all_models) / 5),
+      "Reactance Dichotome" = (length(all_models) / 5))
   )
-} else {
-  summary_all_models <- all_models %>%
-    print_df(rows_to_pack = process_model_component(rows_to_pack)) %>%
-    add_header_above(
-      c(" ", "Subjective MVPA Hurdle Lognormal" = 3, 
-        "Device-Based MVPA Log (Gaussian)" = 3, 
-        "Mood Gaussian" = 3,
-        "Reactance Ordinal" = 3,
-        "Reactance Dichotome" = 3)
-    )
 
-  export_xlsx(
-    summary_all_models, 
-    rows_to_pack = process_model_component(rows_to_pack),
-    file.path("Output", "AllModels_experimental_noAR.xlsx"), 
-    merge_option = 'both', 
-    simplify_2nd_row = TRUE,
-    colwidths = c(38, 
-                  7.2,13.3,7.2,
-                  7.2,13.3,7.2,
-                  7.2,13.3,7.2,
-                  7.2,13.3,7.2,
-                  7.2,13.3,7.2),
-    line_above_rows = c(1,2),
-    line_below_rows = c(-1)
-  )
-}
+
+export_xlsx(
+  summary_all_models, 
+  rows_to_pack = process_model_component(rows_to_pack),
+  file.path("Output", "AllModels_experimental_noAR.xlsx"), 
+  merge_option = 'header', 
+  simplify_2nd_row = TRUE,
+  line_above_rows = c(1,2),
+  line_below_rows = c(-1)
+)
+
   
 print(summary_all_models)
 
