--- a/01_FinalModels.Rmd
+++ b/01_FinalModels.Rmd
@@ -656,6 +656,15 @@ conditional_spaghetti(
   plot_full_range = TRUE
 )
 
+conditional_spaghetti(
+  pa_sub, 
+  effects = c(
+    'pushing_self_cw'
+  ),
+  group_var = 'coupleID'
+  , plot_full_range = TRUE,
+  x_label = 'Daily Plan-Related Pushing (centered)'
+)
 
 ```
 
