--- a/01_FinalModels.Rmd
+++ b/01_FinalModels.Rmd
@@ -661,17 +661,32 @@ conditional_spaghetti(
 
 ```{r report_pa_sub_lognormald, fig.height=7, fig.width=8, dpi=600, results='asis'}
 
-svg("plot.svg", width = 8, height = 7)
+#svg("plot.svg", width = 8, height = 7)
 
 conditional_spaghetti(
   pa_sub, 
   effects = c('pushing_self_cw'),
   group_var = 'coupleID',
   plot_full_range = TRUE,
-  x_label = 'Daily plan-related pushing (centered)'
+  x_label = 'Daily plan-related pushing (centered)',
+  layout_option = "horizontal" 
 )
 
-dev.off()
+#dev.off()
+
+
+#svg("plot2.svg", width = 7, height = 8)
+
+conditional_spaghetti(
+  pa_sub, 
+  effects = c('pushing_self_cw'),
+  group_var = 'coupleID',
+  plot_full_range = TRUE,
+  x_label = 'Daily plan-related pushing (centered)',
+  layout_option = "vertical" 
+)
+
+#dev.off()
 
 ```
 
