--- a/01_FinalModels.Rmd
+++ b/01_FinalModels.Rmd
@@ -644,7 +644,7 @@ plot(
 
 ```
 
-```{r report_pa_sub_lognormald, fig.height=6, fig.width=9, dpi=600, results='asis'}
+```{r report_pa_sub_lognormald, fig.height=10, dpi=600, results='asis'}
 
 conds_eff <- conditional_spaghetti(
   pa_sub, 
@@ -661,7 +661,7 @@ conds_eff <- conditional_spaghetti(
   y_limits = c(0, 100)
 )
 
-svg("plot.svg", width = 9, height = 6)
+svg("plot.svg", height = 10)
 conds_eff$pushing_partner_cw
 dev.off()
 
@@ -672,95 +672,31 @@ print(conds_eff)
 
 
 
-```{r fig.width=10, fig.height=3}
-
-draws_df <- pa_sub %>% 
-  as_draws_df() %>%
-  mutate(
-    combined_Intercept = (1 - plogis(b_hu_Intercept)) * exp(b_Intercept),
-    predictions = 
-      (1 - plogis(b_hu_Intercept + b_hu_pushing_self_cw)) * 
-      exp(b_Intercept + b_pushing_self_cw),
-    combined_slope = predictions / combined_Intercept,
-    hurdle_slope = 1 / exp(b_hu_pushing_self_cw),
-    nonzero_slope = exp(b_pushing_self_cw)
-  ) %>% 
-  select(c(hurdle_slope, nonzero_slope, combined_slope))
-
-# Prepare the data
-plot_data <- draws_df %>%
-  pivot_longer(cols = c(hurdle_slope, nonzero_slope, combined_slope),
-               names_to = "slope_type",
-               values_to = "value") %>%
-  mutate(
-    slope_type = factor(
-      slope_type, 
-      levels = c("combined_slope", "nonzero_slope", "hurdle_slope"),
-      labels = c("Combined", "Non-Zero Component", "Hurdle Component")
-    )
-  )
-
-# Calculate the 99.99% quantiles for each slope type
-quantiles <- plot_data %>%
-  group_by(slope_type) %>%
-  summarize(
-    lower = quantile(value, 0.005),
-    upper = quantile(value, 0.995)
-  )
-
-# Filter the data to include only values within the 99.99% quantile range
-plot_data_filtered <- plot_data %>%
-  left_join(quantiles, by = "slope_type") %>%
-  filter(value >= lower & value <= upper) %>%
-  select(-lower, -upper)
-
-
-# Create the vertical density plots with enhanced styling and internal legend
-ggplot(plot_data_filtered, aes(x = value, y = slope_type, height = after_stat(density))) +
-  geom_density_ridges_gradient(
-    color = 'black',
-    linewidth = 0.4,
-    aes(fill = after_stat(x > 0.999)),
-    scale = 4,
-    rel_min_height = 0.0001,
-    gradient_lwd = 0.1,
-    quantile_lines = TRUE, quantiles = 2  # Adding lines for the median
-  ) +
-  geom_vline(xintercept = 1, linetype = "dashed", color = "black", linewidth = 0.5) +
-  scale_y_discrete(expand = c(0.01, 0)) +
-  scale_x_continuous(expand = c(0.01, 0)) +
-  scale_fill_manual(
-    values = c("lightcoral", "steelblue2"),
-    name = "Effect Direction",
-    labels = c("Negative (<1)", "Positive (>1)")
-  ) +
-  theme_ridges(font_size = 11, grid = TRUE) +  # Reduced font size for a cleaner look
-  theme(
-    panel.grid.major = element_blank(),  # Remove major grid lines for less clutter
-    panel.grid.minor.x = element_line(color = "grey85", linetype = "dotted"),  # Keep only minor grid lines on x-axis
-    panel.grid.minor.y = element_blank(),  # Remove y-axis grid lines
-    axis.title.x = element_text(face = "bold", hjust = 0.5, size = 10),  # Slightly smaller x-axis title
-    axis.text.x = element_text(size = 9),
-    plot.title = element_text(hjust = 0.5, face = "bold", size = 12),  # Slightly smaller plot title
-    plot.subtitle = element_text(hjust = 0.5, face = "italic", size = 10),
-    legend.position = c(0.8, 0.85),  # Keep the legend in its original position
-    legend.title = element_text(face = "bold"),
-    legend.background = element_blank(),  # Remove legend background for a cleaner look
-    legend.key.size = unit(0.4, "cm")
-  ) +
-  labs(
-    x = "Transformed Slopes (Multiplicative Changes):\nOdds Ratios for Hurdle, Expected Values for Non-Zero and Combined Parts",
-    y = NULL,
-    title = "Posterior Density of Transformed Slopes",
-    subtitle = "Median lines shown for each component"
-  )
-
-
-
+```{r fig.height=10}
+conditional_spaghetti(
+  pa_sub, 
+  effects = c(
+    'pushing_partner_cw'
+  ),
+  group_var = 'coupleID',
+  plot_full_range = TRUE,
+  y_limits = c(0, 100)
+)
 ```
 
 
-
+```{r fig.height=10, fig.width=15}
+conditional_spaghetti(
+  pa_sub, 
+  effects = c(
+    'pushing_partner_cw'
+  ),
+  group_var = 'coupleID',
+  plot_full_range = TRUE,
+  y_limits = c(0, 100),
+  layout = 'horizontal'
+)
+```
 
 ```{r pa_sub_lognormal_marginaleffects}
 
