--- a/01_FinalModels.Rmd
+++ b/01_FinalModels.Rmd
@@ -683,7 +683,8 @@ conditional_spaghetti(
   group_var = 'coupleID',
   plot_full_range = TRUE,
   y_limits = c(0, 100),
-  y_label = 'Physical Activit',
+  #y_label = 'Physical Activit',
+  y_label = c('Probability', 'Expected given yes', 'Combined expected total'),
   x_label = 'Positive Social Control'
   ,filter_quantiles = .9995,
   font_family = 'Candara'
