Almost finished plot

--- a/01_FinalModels.Rmd
+++ b/01_FinalModels.Rmd
@@ -683,8 +683,8 @@ conditional_spaghetti(
   group_var = 'coupleID',
   plot_full_range = TRUE,
   y_limits = c(0, 100),
-  #y_label = 'Physical Activit',
-  y_label = c('Probability', 'Expected given yes', 'Combined expected total'),
+  y_label = 'MVPA',
+  y_labels = c('Probability of MVPA > 0', 'Expected MVPA When Active', 'Total Expected MVPA'),
   x_label = 'Positive Social Control'
   ,filter_quantiles = .9995,
   font_family = 'Candara'
@@ -695,18 +695,19 @@ fonts <- c('Candara', 'Segoe UI', 'Calibri', 'Cambria', 'Trebuchet MS', 'Comic S
 for (font_i in fonts) {
   print(font_i)
   a <- conditional_spaghetti(
-    pa_sub, 
-    effects = c(
-      'pressure_partner_cw'
-    ),
-    group_var = 'coupleID',
-    plot_full_range = TRUE,
-    y_limits = c(0, 100),
-    y_label = 'Physical Activit',
-    x_label = 'Exerted Pressure'
-    ,filter_quantiles = .99,
-    font_family = font_i
-  )
+  pa_sub, 
+  effects = c(
+    'persuasion_partner_cw'
+  ),
+  group_var = 'coupleID',
+  plot_full_range = TRUE,
+  y_limits = c(0, 100),
+  y_label = 'MVPA',
+  y_labels = c('Probability of MVPA > 0', 'Expected MVPA When Active', 'Total Expected MVPA'),
+  x_label = 'Positive Social Control'
+  ,filter_quantiles = .9995,
+  font_family = font_i
+)
   
   print(a)
 }
