--- a/01_FinalModels.Rmd
+++ b/01_FinalModels.Rmd
@@ -675,22 +675,8 @@ print(conds_eff)
 
 ```{r fig.height=11, fig.width = 12}
 
-conditional_spaghetti(
-  pa_sub, 
-  effects = c(
-    'persuasion_partner_cw'
-  ),
-  group_var = 'coupleID',
-  plot_full_range = TRUE,
-  y_limits = c(0, 100),
-  y_label = 'MVPA',
-  y_labels = c('Probability of MVPA > 0', 'Expected MVPA When Active', 'Total Expected MVPA'),
-  x_label = 'Positive Social Control'
-  ,filter_quantiles = .9995,
-  font_family = 'Candara'
-)
 
-fonts <- c('Arial', 'Candara', 'Segoe UI', 'Calibri', 'Cambria', 'Trebuchet MS', 'Comic Sans')
+fonts <- c('Arial', 'Candara', 'Segoe UI', 'Cambria', 'Montserrat Thin')
 
 for (font_i in fonts) {
   print(font_i)
