--- a/01_FinalModels.Rmd
+++ b/01_FinalModels.Rmd
@@ -676,7 +676,7 @@ print(conds_eff)
 ```{r fig.height=11, fig.width = 12}
 
 
-fonts <- c('Arial', 'Candara', 'Segoe UI', 'Cambria', 'Montserrat Thin')
+fonts <- c('Arial', 'Candara', 'Cambria')
 
 for (font_i in fonts) {
   print(font_i)
