--- a/01_FinalModels.Rmd
+++ b/01_FinalModels.Rmd
@@ -659,8 +659,21 @@ conds_eff <- conditional_spaghetti(
   group_var = 'coupleID',
   plot_full_range = TRUE,
   y_limits = c(0, 100),
-  filter_quantiles = 0.9995
+  y_label = 'MVPA',
+  y_labels = c('Probability of MVPA > 0', 'Expected MVPA When Active', 'Overall Expected MVPA'),
+  x_label = c(
+    'Positive Social Control', 
+    'Positive Social Control',
+    'Negative Social Control',
+    'Negative Social Control',
+    'Plan-Related Pushing',
+    'Plan-Related Pushing'
+  )
+  ,filter_quantiles = .9995,
+  font_family = 'Candara'
 )
+
+
 
 svg("plot.svg", height = 11, width = 12)
 conds_eff$persuasion_partner_cw
@@ -692,20 +705,6 @@ conditional_spaghetti(
 )
 
 
-conditional_spaghetti(
-  pa_sub, 
-  effects = c(
-    'persuasion_partner_cw'
-  ),
-  group_var = 'coupleID',
-  plot_full_range = TRUE,
-  y_limits = c(0, 100),
-  y_label = 'MVPA',
-  y_labels = c('Probability of MVPA > 0', 'Expected MVPA When Active', 'Overall Expected MVPA'),
-  x_label = 'Positive Social Control'
-  ,filter_quantiles = .9995,
-  font_family = 'Cambria'
-)
   
 ```
 
