--- a/01_FinalModels.Rmd
+++ b/01_FinalModels.Rmd
@@ -677,7 +677,26 @@ print(conds_eff)
 
 ```
 
+```{r fig.height=11, fig.width = 12}
 
+
+conditional_spaghetti(
+  pa_sub, 
+  effects = c(
+    'persuasion_partner_cw'
+  ),
+  group_var = 'coupleID',
+  plot_full_range = TRUE,
+  y_limits = c(0, 100),
+  y_label = "Same-Day MVPA",
+  y_labels = c('Probability of Being Active', 'Minutes of MVPA When Active', 'Overall Expected Minutes of MVPA'),
+  x_label = "Positive Control (Centered)"
+  ,filter_quantiles = .9995,
+  font_family = 'Candara'
+)
+
+  
+```
 
 
 ```{r fig.height=11, fig.width = 12}
